--- a/src/css/variable.styl
+++ b/src/css/variable.styl
@@ -11,6 +11,7 @@ $san-z-index = {
     menu: 1,
     menuLayer: 10,
     mask: 10,
+    drawer: 11,
     dialog: 20,
     popover: 30
 };
